--- a/templates/index.html
+++ b/templates/index.html
@@ -197,7 +197,15 @@
               with the argument 'divide' when the button is clicked.
             - "Divide": The text displayed on the button.
         -->
-        
+                <button onclick="calculate('power')">Power</button>
+        <!--
+            <button> Element: Power Button
+            
+            - onclick="calculate('power')": Sets up an event handler that calls the JavaScript function "calculate"
+              with the argument 'power' when the button is clicked.
+            - "power": The text displayed on the button.
+        -->
+
         <div class="result" id="result"></div>
         <!--
             <div> Element: Result Display
